--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,14 +6,14 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '20 0 * * *'
+#  schedule:
+#    - cron: '20 0 * * *'
   push:
-    branches: [ "main" ]
+    branches: [ "scopes-support" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "scopes-support" ]
 
 env:
   # Use docker.io for Docker Hub if empty
